# File_Explorer

./: .gitattributes  .gitignore  README.md  RECYCLE_BIN_TEST.md  index.html  package-lock.json  package.json  todo.md  tsconfig.json  vite.config.ts  vitest.config.ts
public/: manifest.json  sitemap.xml
release/: Fluent File Explorer-1.0.0-1.x86_64.rpm  Fluent File Explorer_1.0.0_amd64.deb  fluent-file-explorer
release/windows/: Fluent File Explorer_1.0.0_x64_en-US.msi
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  lib.rs  main.rs  watcher.rs
src/__tests__/: App.test.tsx  FileList.test.ts  RecycleBinIntegration.test.ts  RecycleBinLogic.test.ts  Sidebar.test.tsx
src/components/: BatchRenameDialog.tsx  Breadcrumb.tsx  ContextMenu.tsx  DebugPanel.tsx  FileIcon.tsx  FileList.tsx  FilterDropdown.tsx  GroupByDropdown.tsx  MenuBar.tsx  NewItemDialog.tsx  PreviewPanel.tsx  PropertiesDialog.tsx  RenameDialog.tsx  SearchBar.tsx  SettingsDialog.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TemplateDialog.tsx  TerminalPanel.tsx  TitleBar.tsx  Toolbar.tsx
src/components/preview/: PreviewContent.tsx
src/data/: fileTemplates.ts  iconGlyphs.tsx  iconMap.ts
src/hooks/: useBookmarks.ts  useContextMenu.ts  useDragDrop.ts  useFileSystem.ts  useSettings.ts
src/styles/: animations.css  debug.css  dialogs.css  fileList.css  layout.css  preview.css  responsive.css  settings.css  tabbar.css  terminal.css  titlebar.css  toolbar.css
src/types/: index.ts
src/utils/: csvParser.ts  debugLogger.ts  fileClassification.ts  formatters.ts  markdownRenderer.ts  syntaxHighlight.ts
