[package]
name = "fluent-file-explorer"
version = "1.0.0"
description = "A Fluent Desktop File Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "fluent_file_explorer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
trash = "5"
chrono = "0.4"
dirs = "5"
base64 = "0.22"
tauri-plugin-fs = "2"
