[package]
name = "fluent-file-explorer"
version = "1.0.0"
description = "A Fluent Desktop File Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "fluent_file_explorer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
trash = "5"
chrono = "0.4"
dirs = "5"
base64 = "0.22"
tauri-plugin-fs = "2"
urlencoding = "2"
notify = { version = "6", features = ["serde"] }
notify-debouncer-mini = "0.4"
zip = "2"
walkdir = "2"
regex = "1"
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_System_Com", "Win32_Storage_FileSystem"] }

[target.'cfg(windows)'.dependencies]
clipboard-win = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
